<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">


        <TextView
            android:id="@+id/txvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/edtxNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/txvEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/edtxEdad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/txvValoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valoracion"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/edtxValoracion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/txvSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sexo:"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/txvMasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical" />

        <RadioButton
            android:id="@+id/rdBtnMasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/txvFem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical" />

        <RadioButton
            android:id="@+id/rdBtnFem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <Button
        android:id="@+id/btnValidar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btnValidar"
        android:layout_marginTop="16dp"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/btnMostrarLista"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btnMostar" />
</LinearLayout>
